<resources>
    <string name="app_name">PulseSafe</string>
    <string name="welcome_description">Bienvenido a PulseSafe, tu compañero de salud en tiempo real.</string>
    <string name="login">Iniciar Sesión</string>
    <string name="register">Registrarse</string>
    <string name="welcome">Bienvenido</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar Contraseña</string>
    <string name="forgot_password">Olvidé mi contraseña</string>
    <string name="no_account">¿No tienes una cuenta?</string>
    <string name="register_link">Regístrate</string>
    <string name="have_account">¿Ya tienes una cuenta?</string>
    <string name="login_link">Iniciar sesión</string>
    <string name="full_name">Nombres</string>
    <string name="terms_agreement">Al continuar, aceptas los</string>
    <string name="terms_of_use">Términos de uso</string>
    <string name="and">y</string>
    <string name="privacy_policy">Política de privacidad</string>
</resources>